--- a/linear_models.Rmd
+++ b/linear_models.Rmd
@@ -101,3 +101,34 @@ fit = lm(price ~ stars + borough, data = nyc_airbnb)
 broom::tidy(fit)
 broom::glance(fit)
 ```
+
+## Diagnositcs
+
+```{r}
+modelr::add_residuals(nyc_airbnb, fit) %>% 
+  ggplot(aes(x = borough, y = resid)) +
+  geom_violin() +
+  ylim(-500, 1500)
+
+
+modelr::add_residuals(nyc_airbnb, fit) %>% 
+  ggplot(aes(x = stars, y = resid)) +
+  geom_point() +
+  facet_wrap(. ~ borough)
+```
+
+```{r}
+fit %>% 
+  broom::tidy()
+```
+
+what about the significance of borough
+
+```{r}
+fit_null = lm(price ~ stars, data = nyc_airbnb)
+fit_alt = lm(price ~ stars + borough, data = nyc_airbnb)
+
+anova(fit_null, fit_alt) %>% 
+  broom::tidy()
+```
+
